CSS fixes for new mezzanine
  - Buttons cutoff on Filer page with new Mezzanine
  - clone page form
  - Commit and Approve buttons look disabled (fixes #205)

--- a/widgy/static/widgy/css/admin_filer_override.scss
+++ b/widgy/static/widgy/css/admin_filer_override.scss
@@ -1,30 +1,71 @@
 p.file-upload {
   float: left;
   width: 692px;
-  
+
   span.clearable-file-input {
-    
+
     input {
       margin: 0px;
     }
-    
+
     label {
       display: inline-block;
       float: none;
       width: auto;
     }
-    
+
   }
 
 }
 
-#content-related {
-  float: right;
-  margin-right: 0;
-  position: absolute;
-  right: 15px;
-  top: 0;
-  width: 18em;
+body.popup {
+  #container {
+    position: relative;
+
+    #content-main {
+      display: block;
+      float: none;
+      min-width: 44em;
+      width: auto;
+
+      .object-tools {
+        float: left;
+      }
+    }
+
+    #content-related {
+      position: absolute;
+      margin-right: 0;
+      top: 15px;
+      right: 15px;
+      width: 18em;
+    }
+  }
+}
+
+body.filebrowser {
+  #content {
+    margin-top: 100px;
+
+    #content-main {
+      display: block;
+      float: none;
+      min-width: 44em;
+      width: auto;
+
+      .object-tools {
+        float: left;
+      }
+    }
+
+    #content-related {
+      position: absolute;
+      margin-right: 0;
+      top: 115px;
+      right: 15px;
+      width: 18em;
+    }
+  }
 }
 
 #changelist-search input[type="submit"] {
@@ -32,7 +73,7 @@ p.file-upload {
   background: #309BBF;
   height: 20px;
   padding: 0px 2px;
-  
+
   &:hover {
     background: #38B9E6;
   }
